# rustBatteryStatServer

./: Cargo.toml  Dockerfile
.github/workflows/: build.yml
scripts/: report_battery_health.sh
src/: main.rs  model.rs  repository.rs  routes.rs
